<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.aksw</groupId>
		<artifactId>iguana-parent</artifactId>
		<version>${revision}</version> <!-- this is changed from [1.0,99.0) to ${revision} -->
	</parent>
  <artifactId>iguana.corecontroller</artifactId>

  <name>Iguanas Core Controller</name>
  <description>The Controller of Iguanas Core Module. Handling the messaging and is coordinating the ResultProcessor as well as the dataGenerator. Will be communicating with the Web Controller Module.</description>
	<licenses>
		<license>
			<name>AGPLv3 or later</name>
			<url>https://www.gnu.org/licenses/agpl-3.0.html</url>
		</license>
	</licenses>
	<developers>
		<developer>
			<name>Lixi Conrads</name>
			<email>lixiconrads@gmail.com</email>
			<roles>
				<role>Former Developer</role>
			</roles>
			<organization>Dice Research Group</organization>
			<organizationUrl>https://dice-research.org</organizationUrl>
		</developer>
	</developers>
	<organization>
		<name>Dice Research Group</name>
		<url>https://dice-research.org</url>
	</organization>
	<issueManagement>
		<system>GitHub Issue Management</system>
		<url>https://github.com/dice-group/iguana/issues</url>
	</issueManagement>
	<url>https://dice-research.org/IGUANA</url>

	<properties>
		<java.version>11</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<log4j.version>2.13.3</log4j.version>
		<jena.version>3.16.0</jena.version>
		<maven.compile.source>11</maven.compile.source>
		<maven.compile.target>11</maven.compile.target>
	</properties>

<dependencies>
	<dependency>
		<groupId>org.apache.httpcomponents</groupId>
		<artifactId>httpclient</artifactId>
		<version>4.5.13</version>
	</dependency>
	<dependency>
		<groupId>com.fasterxml.jackson.dataformat</groupId>
		<artifactId>jackson-dataformat-yaml</artifactId>
		<version>2.11.2</version>
	</dependency>
	<dependency>
		<groupId>com.networknt</groupId>
		<artifactId>json-schema-validator</artifactId>
		<version>1.0.43</version>
	</dependency>
	<dependency>
		<groupId>org.apache.jena</groupId>
		<artifactId>jena-arq</artifactId>
		<version>${jena.version}</version>
	</dependency>
	<dependency>
		<groupId>com.googlecode.json-simple</groupId>
		<artifactId>json-simple</artifactId>
		<version>1.1.1</version>
	</dependency>
	<!-- JUnit -->
	<dependency>
		<groupId>junit</groupId>
		<artifactId>junit</artifactId>
		<version>4.13.1</version>
		<scope>test</scope>
	</dependency>
	<dependency>
		<groupId>org.simpleframework</groupId>
		<artifactId>simple</artifactId>
		<version>5.1.6</version>
	</dependency>
	<dependency>
		<groupId>org.aksw</groupId>
		<artifactId>iguana.resultprocessor</artifactId>
		<version>${revision}</version>
		<exclusions>
			<exclusion>
				<groupId>org.aksw</groupId>
				<artifactId>iguana.commons</artifactId>
			</exclusion>

		</exclusions>
	</dependency>
		<dependency>
			<groupId>org.aksw</groupId>
			<artifactId>iguana.commons</artifactId>
			<version>${revision}</version>
		</dependency>


	</dependencies>
<build>
		<plugins>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.6</version>
				<executions>
					<execution>
						<id>prepare-agent</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
					<execution>
						<id>post-unit-test</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
						<configuration>
							<!-- Sets the path to the file which contains the execution data. -->

							<dataFile>target/jacoco.exec</dataFile>
							<!-- Sets the output directory for the code coverage report. -->
							<outputDirectory>target/jacoco-ut</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>1.5.0</version>
			</plugin>
			<plugin>
				<artifactId>maven-dependency-plugin</artifactId>
				<executions>
					<execution>
						<phase>install</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/lib</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>


			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>11</source>
					<target>11</target>
					<encoding>UTF-8</encoding>
					<compilerArgs>
						<arg>-parameters</arg>
					</compilerArgs>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>2.4.3</version>
				<configuration>
					<finalName>iguana-${revision}</finalName>
					<outputDirectory>${project.parent.basedir}/target</outputDirectory>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<shadedArtifactAttached>true</shadedArtifactAttached>
							<shadedClassifierName>shaded</shadedClassifierName>
							<transformers>
								<transformer implementation=
													 "org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<mainClass>org.aksw.iguana.cc.controller.MainController</mainClass>
								</transformer>
							</transformers>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<distributionManagement>
		<repository>
			<id>github</id>
			<name>GitHub dice-group Apache Maven Packages</name>
			<url>https://maven.pkg.github.com/dice-group/IGUANA</url>
		</repository>
	</distributionManagement>
</project>
